# hermez-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
npm/: cli.js  install.js  package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
src/: error.rs  main.rs
src/auth/: config.rs  login.rs  mod.rs  token.rs
src/cli/: commands.rs
src/display/: banner.rs  mod.rs  request_log.rs  status.rs
src/protocol/: decoder.rs  encoder.rs  message.rs  mod.rs
src/resources/error-pages/: 500.html  502.html  504.html
src/tunnel/: connection.rs  forwarder.rs  heartbeat.rs  mod.rs  reconnect.rs
